@@ -1,10 +1,11 @@
 package com.example.employeeservice.security;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
@@ -33,7 +34,7 @@ public class JwtFilter extends OncePerRequestFilter{
                 UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
                     jwtUtil.extractUsername(token),
                     null,
-                    Collections.emptyList()
+                    List.of(new SimpleGrantedAuthority("ROLE_USER")) // ✅ add role
                 );
                 //Set the authentication in the context
                 SecurityContextHolder.getContext().setAuthentication(authToken);
